gateway-manifiesto/store-route-external.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-external
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
  hostnames:
  - "arq.gce-back.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/
      backendRefs:
        - name: auth
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/ms/
      backendRefs:
        - name: user
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/checkout/
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/ambassador/
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/products
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/user
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/logout
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/users/
      backendRefs:
        - name: monolito
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api/admin/orders
      backendRefs:
        - name: monolito
          port: 8000
